--- a/app/src/main/res/layout/activity_feedback_popup.xml
+++ b/app/src/main/res/layout/activity_feedback_popup.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="1500px"
+    android:layout_height="750px"
     tools:context=".RulesPopup"
     android:background="#e0f0e3">
 
@@ -102,9 +102,9 @@
         android:layout_toRightOf="@id/LeftMargin"
         android:textColor="@color/red"
         android:textSize="24px"
-        android:layout_marginTop="80px"
+        android:layout_marginTop="8px"
         android:layout_marginLeft="50px"
-        android:text="TAP ANYWHERE ON THE POPUP SCREEN TO EXIT">
+        android:text="TAP ANYWHERE OUTSIDE THE POPUP SCREEN TO EXIT">
 
     </TextView>
 
