--- a/app/src/main/res/layout/activity_rules_popup.xml
+++ b/app/src/main/res/layout/activity_rules_popup.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="1500px"
+    android:layout_height="700px"
     tools:context=".RulesPopup"
     android:background="#e0f0e3"
     android:orientation="vertical">
@@ -117,12 +117,12 @@
         android:layout_width="match_parent"
         android:layout_height="30px"
         android:layout_below="@id/Rules4"
-        android:layout_marginLeft="24px"
-        android:layout_marginTop="10px"
+        android:layout_marginLeft="32px"
+        android:layout_marginTop="8px"
         android:layout_toRightOf="@id/LeftMargin"
-        android:text="TAP ANYWHERE ON THE POPUP SCREEN TO EXIT"
+        android:text="TAP ANYWHERE OUTSIDE THE POPUP SCREEN TO EXIT"
         android:textColor="@color/red"
-        android:textSize="28px">
+        android:textSize="22px">
 
     </TextView>
 
