Added method to MainActivity for the quickplay button, send the user straight into a player vs player game with default settings.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,6 +159,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="7dp"
             android:background="@null"
+            android:onClick="quickPlay"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
