--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -27,7 +27,6 @@
             tools:layout_editor_absoluteY="104dp" />
 
 
-
         <ImageButton
             android:id="@+id/muteButtonGame"
             android:layout_width="wrap_content"
@@ -68,6 +67,21 @@
             android:layout_y="44dp"
             app:srcCompat="@drawable/piecehighlight"
             tools:visibility="visible" />
+
+        <ImageButton
+            android:id="@+id/rulesButtonGame"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="173dp"
+            android:layout_marginEnd="323dp"
+            android:layout_marginBottom="498dp"
+            android:layout_x="340dp"
+            android:layout_y="173dp"
+            android:background="@null"
+            android:onClick="rulesPopupGame"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/questionmarkbutton" />
 
     </AbsoluteLayout>
 
@@ -607,66 +621,18 @@
         android:id="@+id/ResetGameButton"
         android:layout_width="110dp"
         android:layout_height="60dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginStart="270dp"
+        android:layout_marginTop="663dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="8dp"
         android:background="@null"
         android:onClick="reset"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/resetgamebutton" />
-
-    <ImageButton
-        android:id="@+id/ChangePiecesButton"
-        android:layout_width="110dp"
-        android:layout_height="60dp"
-        android:background="@null"
-        android:onClick="reset"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.92"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.982"
-        app:srcCompat="@drawable/changepiecesbutton" />
-
-    <ImageButton
-        android:id="@+id/hintButton"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="322dp"
-        android:layout_marginTop="175dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginBottom="496dp"
-        android:background="@null"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/lightbulbbutton" />
-
-    <ImageButton
-        android:id="@+id/rulesButtonGame"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="173dp"
-        android:layout_marginEnd="323dp"
-        android:layout_marginBottom="498dp"
-        android:background="@null"
-        android:onClick="rulesPopupGame"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/questionmarkbutton" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/blackCheckerArea"
